add additional information to footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Jonathan McGlone">
+	<meta name="author" content="Uli Fahrer">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>{{ page.title }} | Uli Fahrer | CS Student, Developer, ...</title>		
+	<title>{{ page.title }} Uli Fahrer - CS Student and Developer.</title>
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
