--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ ul.swatch li:first-child { webkit-border-top-left-radius: 9px; -webkit-border-bo
 .cv h2 { font-size: 26.5px; }
 .cv h1 { font-size: 32.5px; }
 
-.publications, .projects, .about, .cv, .error { margin-bottom: 30px; }
+.publications, .projects, .events, .lectures, .about, .cv, .error { margin-bottom: 30px; }
 
 /* Contact */
 iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
