first project site draft

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 	<title>{{ page.title }} Uli Fahrer - CS Student and Developer.</title>
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 	
