--- a/css/style.css
+++ b/css/style.css
@@ -20,57 +20,22 @@ img.avatar { margin-bottom: 30px; }
 .container > hr { margin: 30px 0; }
 .container > hr.footer {margin-bottom: 15px; }
 
-/* E-Mail */
-.obfuscate { unicode-bidi: bidi-override; direction: rtl; }
-
-/* Jumbotron */
-.jumbotron { margin: 80px 0; }
-.jumbotron h1 { font-size: 72px; line-height: 1; }
-.jumbotron .btn { font-size: 21px; padding: 14px 24px; }
-.marketing p { line-height: 25px; }
-.marketing p.lead { line-height: 30px; }
-
-/* Notes */
-.notelist { width: 600px; margin: 0 auto; }
-ul.listnotes { margin: 0 auto; }
-ul.listnotes li {line-height: 30px; }
-
-/* Note */
-.note, .contact, .about, .error, .swatches { width: 85%; margin: 0 auto; line-height: 26px; }
-.note h2.date, .swatch-log h2.date { font-size: 24.5px; font-weight: 300; font-style: italic; }
-
 /* Swatches */
 .swatch-log h2.date { margin-bottom: 30px; }
 .swatch-log { margin: 30px auto 70px; height: 140px; }
 ul.swatch { list-style: none; margin: 0 auto; padding: 0; height: 50px; }
 ul.swatch li { text-transform: uppercase; display: inline; float: left; height: 80px; width: 75px; text-indent: -9999px; font-size: 14px; text-align: center; font-family: 'Montserrat', Helvetica, sans-serif; background-image: url(/img/glass.png); background-repeat: repeat-x; background-position: 0 50%;}
 ul.swatch li:hover { height: 75px; width: 75px; vertical-align: middle; text-indent: 0; }
-/*
-ul.swatch li:last-child { webkit-border-top-right-radius: 9px; -webkit-border-bottom-right-radius: 9px; -moz-border-radius-topright: 9px; -moz-border-radius-bottomright: 9px; border-top-right-radius: 9px; border-bottom-right-radius: 9px; }
-ul.swatch li:first-child { webkit-border-top-left-radius: 9px; -webkit-border-bottom-left-radius: 9px; -moz-border-radius-topleft: 9px; -moz-border-radius-bottomleft: 9px; border-top-left-radius: 9px; border-bottom-left-radius: 9px; }
-*/
+
+
 .swatch-log p { font-size: 14px; clear: left; margin-top: 10px; font-family: 'Montserrat', Helvetica, sans-serif; text-transform: uppercase; }
 .clear { clear: both; height: 20px; }
 
-/* CV */
-.cv {line-height: 23px; width: 90%; margin: 0 auto;}
-.cv li { line-height: 23px; }
-.cv h2 { font-size: 26.5px; }
-.cv h1 { font-size: 32.5px; }
 
 .publications, .projects, .events, .lectures, .about, .cv, .error { margin-bottom: 30px; }
 
 /* Contact */
 iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
-
-/* Guides */
-.guide { width: 90%; margin: 0 auto 60px auto; line-height: 26px;}
-.guide .title { padding: 100px 30px 0px; width: 100%; height: 60%; margin-bottom: 40px; background: #d5d5d5; color: #428bca; }
-.guide .title h1 { font-size: 46px; color: #181818; }
-.guide p { margin: 0 0 1em;  }
-.guide img { border: solid 1px #d5d5d5; border-radius: 4px; margin: 40px auto; display: block; }
-.guide .notes { font-size: 12px; }
-.guide .notes h2 { font-size: 14px; }
 
 /* Code */
 pre.prettyprint { padding: 10px !important; margin: 40px; font-size: 12px;}
@@ -90,13 +55,16 @@ pre.prettyprint { padding: 10px !important; margin: 40px; font-size: 12px;}
 	font-family: 'Montserrat', Helvetica, sans-serif; }
 
 
-.github-icon-svg,
-.twitter-icon-svg {
+.github-icon-svg, .twitter-icon-svg {
 	display: inline-block;
 	width: 16px;
 	height: 16px;
 	position: relative;
 	top: 3px;
+}
+
+.icon-grey {
+    color: #C2C2C2
 }
 
 .username {
