remove plugin, because it's not supported

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,18 +6,14 @@
 
 		<div class="col-sm-2">
 			<a href="https://github.com/{{ site.github_username }}">
-				<span class="icon github">
-				   {% icon fa-github icon-grey %}
-				</span>
+				<span class="icon github fa fa-github icon-grey"></span>
 				<span class="username">Tooa{{ page.github_username }}</span>
 			</a>
 		</div>
 
 		<div class="col-sm-2">
 			<a href="https://twitter.com/{{ site.twitter_username }}">
-				<span class="icon twitter">
-                    {% icon fa-twitter icon-grey %}
-				</span>
+				<span class="icon twitter fa fa-twitter icon-grey"></span>
 				<span class="username">UliFahrer{{ page.twitter_username }}</span>
 			</a>
 		</div>
