improved publication representation

--- a/_includes/publication-list.html
+++ b/_includes/publication-list.html
@@ -1,16 +1,29 @@
-<ul>
-    {% for publication in include.publications reversed %}
-        {% if publication.type == include.type %}
-        <li>
-            <p><small>
-                {{ publication.author }} ({{ publication.year }}): {{ publication.title }}.
-                {{ publication.booktitle }},
-                {% if publication.pages %}
-                pages {{ publication.pages }},
+<div class="panel panel-info">
+    <div class="panel-heading"><strong>{{ include.headline }}</strong></div>
+    <div class="panel-body">
+        <ul>
+            {% for publication in include.publications reversed %}
+                {% if publication.type == include.type %}
+                <li>
+                    <p><small>
+                        {{ publication.author }} ({{ publication.year }}): {{ publication.title }}.
+                        {{ publication.booktitle }},
+                        {% if publication.pages %}
+                        pages {{ publication.pages }},
+                        {% endif %}
+                        {{ publication.publisher }} (<a href="{{ publication.url }}">pdf</a>).
+                    </small></p>
+                    <p>
+                        {% if publication.meta %}
+                            {{ publication.meta }}
+                        {% endif %}
+                    </p>
+                </li>
                 {% endif %}
-                {{ publication.publisher }} (<a href="{{ publication.url }}">pdf</a>).
-            </small></p>
-        </li>
-        {% endif %}
-    {% endfor %}
-</ul>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+
+
+
