additional information for projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 	<ul class="nav nav-pills pull-right">
 		<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
 		<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
-		<li class="{{ page.events }}"><a href="/events" title="Events">Events</a></li>
-		<li class="{{ page.lectures }}"><a href="/lectures" title="Lectures">Lectures</a></li>
+		<!--<li class="{{ page.events }}"><a href="/events" title="Events">Events</a></li>
+		<li class="{{ page.lectures }}"><a href="/lectures" title="Lectures">Lectures</a></li>-->
 	</ul>
 	<h3 class="text-muted"><a href="/">Uli Fahrer</a></h3>
 </div>
