add google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
     <script src="../../assets/js/html5shiv.js"></script>
     <script src="../../assets/js/respond.min.js"></script>
 	<![endif]-->
+
+	{% include analytics.html %}
 </head>
