--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -4,11 +4,14 @@ layout: default
 
 <div class="blog-overview">
 
-        <div class="well">
+    <div class="row">
+        <div class="col-md-12">
             {% include tag_bar.html %}
         </div>
 
-    <div class="container">
+        <h2>Blog Posts</h2>
+        <hr class="style-two">
+
         <div class="col-md-12">
             {{ content }}
         </div>
