--- a/_includes/tag_bar.html
+++ b/_includes/tag_bar.html
@@ -1,1 +1,7 @@
-<i class="fa fa-tags"></i> Tag Cloud:<br>{% for tag in site.tags %} <a href="/tags/{{ tag[0] }}" rel="tooltip" title="View posts tagged with &quot;{{ tag[0] }}&quot;"><span class="label label-info">{{ tag[0] }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}
+{% for tag in site.tags %}
+    <a href="/tags/{{ tag[0] }}" rel="tooltip" title="View posts tagged with &quot;{{ tag[0] }}&quot;">
+        <span class="label label-primary">{{ tag[0] }}</span></a>
+    {% if forloop.last != true %} {% endif %}
+{% endfor %}
+
+
