--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -14,19 +14,29 @@ layout: blog-overview
                 </div>
                 <div class="col-md-8">
                     <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
-                    <p>
-                        {{ post.summary }}
-                    </p>
-                    <p>
+                    <!--TODO: Rename class -->
+                    <div class="post">
+                        <p>
+                            {{ post.summary }} [...] <a href="{{ post.url }}">Read more</a>
+                        </p>
+                        <ul class="tags">
+                            {% for tag in post.tags %}
+                            <a href="/tags/{{ tag }}" rel="tooltip"
+                               title="View posts tagged with &quot;{{ tag[0] }}&quot;">{{ tag }}</a>
+                            {% if forloop.last != true %} {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+
+
+                    <p class="pull-right">
                         <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
-                        | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
-                        <br />
-                        <i class="fa fa-tags"></i> Tags :{% for tag in post.tags %} <a href="/tags/{{ tag }}" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}
+                        | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
                     </p>
-                    <p><a href="{{ post.url }}">Read more</a></p>
                 </div>
             </div>
             {% endif %}
         {% endfor %}
+        <hr class="style-two">
     {% endfor %}
 </div>
