--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -5,12 +5,12 @@ layout: default
 <div class="blog-overview">
 
     <div class="row">
-        <div class="col-md-12">
+        <!--<div class="col-md-12">
             {% include tag_bar.html %}
         </div>
 
         <h2>Blog Posts</h2>
-        <hr class="style-two">
+        <hr class="style-two">-->
 
         <div class="col-md-12">
             {{ content }}
