remove tag plugin, because it not supported by github.

--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -5,12 +5,11 @@ layout: default
 <div class="blog-overview">
 
     <div class="row">
-        <!--<div class="col-md-12">
-            {% include tag_bar.html %}
+        <div class="col-md-12">
+            <h2>Tag Cloud</h2>
+            {% include tag-cloud.html %}
         </div>
-
-        <h2>Blog Posts</h2>
-        <hr class="style-two">-->
+        <hr class="style-two">
 
         <div class="col-md-12">
             {{ content }}
