changed nav style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="site-footer wrapper">
 	<div class="row">
 		<div class="col-sm-4">
 			<p><small>&copy; 2015</small></p>
