--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
-<div class="header">
-	<ul class="nav nav-pills pull-right">
-		<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
-		<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
-		<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
-		<!--<li class="{{ page.events }}"><a href="/events" title="Events">Events</a></li>
-		<li class="{{ page.lectures }}"><a href="/lectures" title="Lectures">Lectures</a></li>-->
-	</ul>
-	<h3 class="text-muted"><a href="/">Uli Fahrer</a></h3>
+<div class="site-header wrapper">
+	<div class="row">
+			<ul  class="main-navigation nav nav-pills ">
+				<li class="current-menu-item"><a href="/">Home</a></li>
+				<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
+				<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
+				<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
+			</ul>
+	</div>
 </div>
