--- a/_includes/publication-list.html
+++ b/_includes/publication-list.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
-    <div class="panel-heading"><strong>{{ include.headline }}</strong></div>
+    <div class="panel-heading"><h4 class="panel-title">{{ include.headline }}</h4></div>
     <div class="panel-body">
         <ol>
             {% for publication in include.publications reversed %}
