--- a/_includes/tag-cloud.html
+++ b/_includes/tag-cloud.html
@@ -1,4 +1,4 @@
-<div class="embed">
+<div class="row">
     {% assign tags = site.tags | sort %}
     {% for tag in tags %}
          <span class="site-tag">
