--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,17 +5,12 @@
 	<meta name="author" content="Uli Fahrer">
 
 	<title>{{ page.title }} Uli Fahrer - CS Student and Developer.</title>
-	<!-- styles -->
+
+	<!-- STYLES -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
-
-	<!-- FONTS -->
-	<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=UnifrakturMaguntia' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Coustard' rel='stylesheet' type='text/css'>
-
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
