--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,21 +5,25 @@
 		</div>
 
 		<div class="col-sm-2">
-			<a href="https://github.com/{{ site.github_username }}">
-				<span class="icon github fa fa-github icon-grey"></span>
-				<span class="username">Tooa{{ page.github_username }}</span>
-			</a>
+			<p>
+				<a href="https://github.com/{{ site.github_username }}">
+					<span class="icon github fa fa-github grey"></span>
+					<span class="username">Tooa{{ page.github_username }}</span>
+				</a>
+			</p>
 		</div>
 
 		<div class="col-sm-2">
-			<a href="https://twitter.com/{{ site.twitter_username }}">
-				<span class="icon twitter fa fa-twitter icon-grey"></span>
-				<span class="username">UliFahrer{{ page.twitter_username }}</span>
-			</a>
+			<p>
+				<a href="https://twitter.com/{{ site.twitter_username }}">
+					<span class="icon twitter fa fa-twitter grey"></span>
+					<span class="username">UliFahrer{{ page.twitter_username }}</span>
+				</a>
+			</p>
 		</div>
 
 		<div class="col-sm-4">
-			<p class="pull-right"><small><a href="/about" title="About this site">About this site</a></small></p>
+			<p class="pull-right"><small><a href="/about" title="About this site">Impressum</a></small></p>
 		</div>
 	</div>
 </div> <!-- /footer -->
