--- a/css/style.css
+++ b/css/style.css
@@ -225,3 +225,13 @@ h4 { font-size: 0.90em; margin: 1.0em 0 .6em 0; }
 h5 { font-size: 0.90em; margin: 1.0em 0 .8em 0; }
 h6 { font-size: 0.85em; margin: 1.0em 0 .8em 0; }
 p { margin: 1.2em 0; }
+
+.social-icons {
+	height: 50px;
+	with: 50px;
+}
+
+.social-icons li {
+	display: inline;
+	font-size: 26px;
+}
