add recent posts to blog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="site-footer wrapper">
 	<div class="row">
 		<div class="col-sm-6">
-			<p><small>&copy; 2015</small></p>
+			<p><small>&copy; 2015 Uli Fahrer</small></p>
 		</div>
 
 		<div class="col-sm-6">
