--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -2,34 +2,35 @@
 layout: blog-overview
 ---
 
+<h2>{{page.title}}</h2>
 {% for post in site.tags.[page.tag] %}
-<div class="row">
-    <h2>{{page.title}}</h2>
-    <div class="col-md-4">
-        <a href="{{ post.url }}">
-            <img border="0" src="/img/posts/{{ post.image }}" alt="{{ post.title }} image" class="listImage img-rounded">
-        </a>
-    </div>
-    <div class="col-md-8">
-        <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
-        <!--TODO: Rename class -->
-        <div class="post">
-            <p>
-                {{ post.summary }} [...] <a href="{{ post.url }}">Read more</a>
-            </p>
-            <ul class="tags">
-                {% for tag in post.tags %}
-                <a href="/tag/{{ tag }}/" rel="tooltip"
-                   title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
-                {% if forloop.last != true %} {% endif %}
-                {% endfor %}
-            </ul>
+    <div class="row">
+        <div class="col-md-4">
+            <a href="{{ post.url }}">
+                <img border="0" src="/img/posts/{{ post.image }}" alt="{{ post.title }} image" class="listImage img-rounded">
+            </a>
         </div>
+        <div class="col-md-8">
+            <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
+            <!--TODO: Rename class -->
+            <div class="post">
+                <p>
+                    {{ post.summary }} [...] <a href="{{ post.url }}">Read more</a>
+                </p>
+                <ul class="tags">
+                    {% for tag in post.tags %}
+                    <a href="/tag/{{ tag }}/" rel="tooltip"
+                       title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                    {% if forloop.last != true %} {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
 
-        <p class="pull-right">
-            <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
-            | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
-        </p>
+            <p class="pull-right">
+                <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
+                | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
+            </p>
+        </div>
     </div>
-</div>
+    <hr class="style-two">
 {% endfor %}
