--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,20 @@ p { margin: 1.2em 0; }
 	display: inline;
 	font-size: 26px;
 }
+
+.icon-list li {
+	padding: 0 0 5px 20px;
+	display: block;
+	position: relative;
+}
+.icon-list li:before {
+	font-family: 'Glyphicons Halflings';
+	position: absolute;
+	left: 0px;
+	top:1px;
+	font-size:80%
+}
+
+.mark li:before {
+	content: '\e074';
+}
