fix mobile font scale

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" width="device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" width="width=device-width, initial-scale=1">
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Uli Fahrer">
 
@@ -13,8 +14,8 @@
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
-    <script src="../../assets/js/html5shiv.js"></script>
-    <script src="../../assets/js/respond.min.js"></script>
+    	<script src="/js/html5shiv.min.js"></script>
+    	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 
 	{% include analytics.html %}
