--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,3 @@
 <!-- javascript at the end of the doc so page loads faster -->
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
