--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <div class="site-header wrapper">
 	<div class="row">
-			<ul  class="main-navigation nav nav-pills ">
+		<div class="col-md-12">
+			<ul class="main-navigation nav nav-pills">
 				<li class="current-menu-item"><a href="/">Home</a></li>
 				<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
 				<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
 				<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
 			</ul>
+		</div>
 	</div>
 </div>
