--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,5 @@
 <!-- javascript at the end of the doc so page loads faster -->
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+
+<script>(function(){var s=document.createElement("script");s.onload=function(){bootlint.showLintReportForCurrentDocument([]);};s.src="https://maxcdn.bootstrapcdn.com/bootlint/latest/bootlint.min.js";document.body.appendChild(s)})();</script>
