--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="site-header wrapper">
+<div class="site-header">
 	<div class="row">
 		<div class="col-md-12">
 			<ul class="main-navigation nav nav-pills">
