--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,10 @@ layout: default
 ---
 <div class="page">
 
-  <header class="post-header">
+  <header>
   </header>
 
-  <article class="post-content">
+  <article>
     {{ content }}
   </article>
 
