--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div class="site-footer">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6 col-xs-6">
 			<p><small>&copy; 2015 Uli Fahrer</small></p>
 		</div>
 
-		<div class="col-md-6">
+		<div class="col-md-6 col-xs-6">
 			<p class="pull-right"><small><a href="/about" title="About this site">Impressum</a></small></p>
 		</div>
 	</div>
