--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ h4.about-quote {
 	height: auto;
 }
 
+.avatar {
+    margin-top: 25px;
+}
+
 span.site-tag a {
 	display: inline-block;
 	margin-right: 12px;
@@ -35,6 +39,13 @@ span.site-tag a {
 	.container {
 		max-width: 750px;
 	}
+}
+
+@media screen and (max-width: 375px) {
+    .avatar {
+        width: 100px;
+        height: 100px;
+    }
 }
 
 dt, dd { margin-top: 10px; }
@@ -218,7 +229,8 @@ p { margin: 1.2em 0; }
 
 .social-icons {
 	height: 50px;
-	with: 50px;
+    margin-bottom: 10px;
+    with: 50px;
 }
 
 .social-icons li {
