--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -5,12 +5,12 @@ layout: blog-overview
 <h2>{{page.title}}</h2>
 {% for post in site.tags.[page.tag] %}
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
             <a href="{{ post.url }}">
                 <img border="0" src="/img/posts/{{ post.image }}" alt="{{ post.title }} image" class="listImage img-rounded">
             </a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 hidden-xs hidden-sm">
             <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
             <!--TODO: Rename class -->
             <div class="post">
@@ -19,9 +19,9 @@ layout: blog-overview
                 </p>
                 <ul class="tags">
                     {% for tag in post.tags %}
-                    <a href="/tag/{{ tag }}/" rel="tooltip"
-                       title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
-                    {% if forloop.last != true %} {% endif %}
+                        <a href="/tag/{{ tag }}/" rel="tooltip"
+                           title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                        {% if forloop.last != true %} {% endif %}
                     {% endfor %}
                 </ul>
             </div>
@@ -30,6 +30,21 @@ layout: blog-overview
                 <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
                 | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
             </p>
+        </div>
+
+        <div class="col-xs-8 hidden-md">
+            <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
+           <p>
+                <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
+                | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
+            </p>
+            <ul class="tags">
+                {% for tag in post.tags %}
+                    <a href="/tag/{{ tag }}/" rel="tooltip"
+                       title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                    {% if forloop.last != true %} {% endif %}
+                {% endfor %}
+            </ul>
         </div>
     </div>
     <hr class="style-two">
