--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -32,7 +32,7 @@ layout: blog-overview
             </p>
         </div>
 
-        <div class="col-xs-8 hidden-md">
+        <div class="col-xs-8 hidden-md hidden-lg hidden-print">
             <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>
            <p>
                 <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
